# Flam_CLI_app

./: .gitignore  README.md  config.json  pyproject.toml
flam/: cli.py  config.py  dashboard.py  db.py  k.txt  worker.py
tests/: test_basic.py
